# medallion-data-platform

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  databricks.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci.yml  deploy.yml  docs.yml
api/: index.html
architecture/: index.html
assets/silver/: customers.yaml  leads.yaml  orders.yaml
bronze/: index.html
config/: pipeline_config.yaml
config/schemas/bronze/: online_tcg_customers.yaml  online_tcg_orders.yaml  salesforce_leads.yaml
data/raw/: customers.csv  orders.csv  sf_leads.csv
docs/: api.md  architecture.md  bronze.md  gold.md  index.md  silver.md
gold/: index.html
search/: search_index.json
silver/: index.html
src/my_project/: pipeline.py
tests/: conftest.py  test_bronze_online_tcg_task.py  test_bronze_salesforce_task.py  test_gold_dim_leads.py  test_medallion.py  test_scd2.py  test_schema_validator.py  test_silver_task.py  test_surrogate_key.py
tests/bronze/: test_bronze_online_tcg.py  test_bronze_salesforce.py
tests/generic/: test_config_models.py  test_medallion.py  test_pipeline_config_loader.py  test_schema_loader.py  test_schema_validator.py  test_surrogate_key.py  test_transformations.py
tests/gold/: test_base_gold_task.py  test_gold_dim_customers.py  test_gold_dim_leads.py  test_gold_fact_orders.py
tests/silver/: test_scd2.py  test_silver_task.py
tests/utils/: test_pipeline_config_loader.py  test_schema_loader.py  test_test_data_builder.py  test_transformations.py
(+27 files in other folders)
