[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.venv
  | \.git
  | __pycache__
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    "venv",
    ".venv",
    "tests"
]

[tool.coverage.run]
source = ["src/my_project"]
omit = [
    "*/pipeline.py",           # entry point
    "*/__main__.py",           # entry points
    "*/jobs/*",                # obsolete jobs folder
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def main\\(\\):",         # exclude main() entry points
    "raise NotImplementedError",
]
show_missing = true
